--- a/css/vietnam.css
+++ b/css/vietnam.css
@@ -137,6 +137,9 @@ tr:nth-child(2n+1) {
   #cNavNew li:hover .level2,#cNavNew li:hover .level2 a {background:#C6C366; color:white;}
   /*level 2 hover*/
   #cNavNew li .level2 li:hover>a{background:white;color:black;}
+  #cNavNew li .level2 li{
+    background: #C6C366;
+  }
   /*level 3 hover*/
   #cNavNew li:hover .level3 a {
       background: #3D9C00;
